:bug: 修复 method proxy